--- a/angular-material2-extended/.gitignore
+++ b/angular-material2-extended/.gitignore
@@ -1,8 +1,4 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
-
-/.vs/angular-material2-extended/v15
+﻿# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
 /dist
