--- a/angular-material2-extended/package.json
+++ b/angular-material2-extended/package.json
@@ -28,6 +28,7 @@
     "@ngx-formly/material": "^2.0.0-rc.1",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "quill": "^1.3.4",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
