--- a/angular-material2-extended/package.json
+++ b/angular-material2-extended/package.json
@@ -27,13 +27,16 @@
     "@ngx-formly/core": "^2.0.0-rc.1",
     "@ngx-formly/material": "^2.0.0-rc.1",
     "bootstrap": "^4.0.0-beta.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "imask": "^2.2.0",
     "quill": "^1.3.4",
     "rxjs": "^5.5.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/core": "0.0.28",
     "@angular/cli": "1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
@@ -52,6 +55,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "webpack-dev-server": "2.7.1"
   }
 }
