--- a/angular-material2-extended/package.json
+++ b/angular-material2-extended/package.json
@@ -27,6 +27,7 @@
     "@ngx-formly/bootstrap": "^2.0.0-rc.1",
     "@ngx-formly/core": "^2.0.0-rc.1",
     "@ngx-formly/material": "^2.0.0-rc.1",
+    "angular2-virtual-scroll": "^0.3.2",
     "bootstrap": "^4.0.0-beta.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
