--- a/angular-material2-extended/package.json
+++ b/angular-material2-extended/package.json
@@ -28,9 +28,11 @@
     "@ngx-formly/core": "^2.0.0-rc.1",
     "@ngx-formly/material": "^2.0.0-rc.1",
     "angular2-virtual-scroll": "^0.3.2",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.0.0-beta.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "firebase": "^4.9.1",
     "imask": "^2.2.0",
     "quill": "^1.3.4",
     "rxjs": "^5.5.2",
